--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -27,3 +27,10 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+.container {
+  padding-top: 80px;
+  width: 450px;
+  margin: auto;
+  font-size: 20px;
+}
