--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -3,6 +3,7 @@
   padding-right: 10px;
   margin-left: 2em;
   margin-right: 2em;
+  margin-top: 1em;
   border: 1px solid #dddddd;
   background-color: #eeeeee;
   border-radius: 10px;
