--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -11,6 +11,10 @@
 .tweet header {
   padding-left: 10px;
   padding-right: 10px;
+  height: 35px;
+  line-height: 35px;
+  font-size: 22px;
+  font-weight: bold;
 }
 
 .tweet form {
@@ -21,6 +25,8 @@
 
 .tweet footer {
   background-color: white;
+  border-top: 1px solid #dddddd;
+  font-size: 12px;
   padding-left: 10px;
   padding-right: 10px;
 }
