--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,8 +1,8 @@
 .new-tweet {
   padding-left: 10px;
   padding-right: 10px;
-  border: 1px solid #dddddd;
-  background-color: #eeeeee;
+  border: 1px solid #000000;
+  background-color: #dddddd;
   border-radius: 10px;
   position: fixed;
   z-index: 1030;
