minor style changes

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -2,7 +2,7 @@
   padding-left: 10px;
   padding-right: 10px;
   border: 1px solid #000000;
-  background-color: #dddddd;
+  background-color: #eeeeee;
   border-radius: 10px;
   position: fixed;
   z-index: 1030;
