start to consolidate css to one file, scss files importing to layout.scss

--- a/public/styles/_nav.scss
+++ b/public/styles/_nav.scss
@@ -1,6 +1,6 @@
 #nav-bar {
-  background-color: #00a087;
-  color: #e8fdff;
+  background-color: $color1;
+  color: $colorText;
   height: 80px;
   width: 100%;
   margin: auto;
