--- a/public/styles/_tweets.scss
+++ b/public/styles/_tweets.scss
@@ -1,7 +1,7 @@
 .tweet {
   margin-top: 1em;
   border: 2px solid #dddddd;
-  background-color: #eeeeee;
+  background-color: $color3;
   border-radius: 5px;
   border-bottom-left-radius: 2px;
   opacity: 0.6;
@@ -40,7 +40,7 @@
 
   form {
     padding: 15px;
-    background-color: white;
+    background-color: $color4;
     overflow-wrap: break-word;
   }
 
@@ -48,7 +48,7 @@
     height: 25px;
     padding-left: 10px;
     padding-right: 10px;
-    background-color: white;
+    background-color: $color4;
     border-top: 1px solid #dddddd;
     overflow: hidden;
   }
