--- a/public/styles/layout.scss
+++ b/public/styles/layout.scss
@@ -13,6 +13,13 @@ html {
   box-sizing: inherit;
 }
 
+// color variables
+$color1: #71c9ce;
+$color2: #a6e3e9;
+$color3: #cbf1f5;
+$color4: #e3fdfd;
+$colorText: black;
+
 /*
  * Global layout stuff
  */
@@ -20,7 +27,7 @@ html {
 body {
   margin: 0;
   color: #244751;
-  background-color: #eee;
+  background-color: $color3;
   font-family: 'Roboto Condensed', sans-serif;
 }
 
@@ -43,3 +50,7 @@ body {
 .container.active {
   padding-top: 240px;
 }
+
+@import 'nav';
+@import 'new-tweet';
+@import 'tweets';
