--- a/public/styles/_nav.scss
+++ b/public/styles/_nav.scss
@@ -31,14 +31,14 @@
     /* Safari */
     -webkit-transition-duration: 0.1s;
     transition-duration: 0.1s;
-    border: 2px solid white;
-    background-color: #00c5a8;
-    color: white;
+    border: 2px solid $colorComposeButtonBorder;
+    background-color: $colorComposeButton;
+    color: $colorComposeButtonText;
     outline: none;
   }
 
   .compose:hover {
-    background-color: white;
-    color: black;
+    background-color: $colorComposeButtonHover;
+    color: $colorComposeButtonHoverText;
   }
 }
