--- a/public/styles/_tweets.scss
+++ b/public/styles/_tweets.scss
@@ -1,6 +1,6 @@
 .tweet {
   margin-top: 1em;
-  border: 2px solid #dddddd;
+  border: 2px solid $colorBorder;
   background-color: $color3;
   border-radius: 5px;
   border-bottom-left-radius: 2px;
@@ -40,7 +40,7 @@
 
   form {
     padding: 15px;
-    background-color: $color4;
+    background-color: $colorTweetBackground;
     overflow-wrap: break-word;
   }
 
@@ -48,8 +48,8 @@
     height: 25px;
     padding-left: 10px;
     padding-right: 10px;
-    background-color: $color4;
-    border-top: 1px solid #dddddd;
+    background-color: $colorTweetBackground;
+    border-top: 1px solid $colorBorder;
     overflow: hidden;
   }
 
