centralized error text color as was missed on first pass

--- a/public/styles/layout.scss
+++ b/public/styles/layout.scss
@@ -29,6 +29,8 @@ $colorComposeButtonText: white;
 $colorComposeButtonHover: white;
 $colorComposeButtonHoverText: black;
 
+$colorErrorText: #red;
+
 
 /*
  * Global layout stuff
