--- a/public/styles/layout.scss
+++ b/public/styles/layout.scss
@@ -29,7 +29,7 @@ $colorComposeButtonText: white;
 $colorComposeButtonHover: white;
 $colorComposeButtonHoverText: black;
 
-$colorErrorText: #red;
+$colorErrorText: red;
 
 
 /*
