minor color changes to buttons and styling

--- a/public/styles/_nav.scss
+++ b/public/styles/_nav.scss
@@ -39,6 +39,7 @@
 
   .compose:hover {
     background-color: $colorComposeButtonHover;
+    border-color: $colorBorder;
     color: $colorComposeButtonHoverText;
   }
 }
