--- a/public/styles/_new-tweet.scss
+++ b/public/styles/_new-tweet.scss
@@ -45,6 +45,7 @@
 
   .submit-button:hover {
     background-color: $colorComposeButtonHover;
+    border-color: $colorBorder;
     color: $colorComposeButtonHoverText;
   }
 
