--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -95,7 +95,7 @@ body {
   padding-left: 10px;
   padding-right: 10px;
   border: 1px solid #dddddd;
-  background-color: #e3fdfd;
+  background-color: #a6e3e9;
   border-radius: 10px;
   position: fixed;
   z-index: 1030;
