--- a/public/styles/layout.scss
+++ b/public/styles/layout.scss
@@ -32,6 +32,8 @@ $colorComposeButtonHoverText: black;
 
 $colorErrorText: red;
 
+// screen breakpoints
+$break-small: 500px;
 
 /*
  * Global layout stuff
