--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -33,7 +33,9 @@ body {
   padding-bottom: 1em;
   padding-left: 2em;
   padding-right: 2em;
-  width: 450px;
+  width: 85%;
+  min-width: 530px;
+  max-width: 680px;
   margin: auto;
   font-size: 20px;
   background-color: white;
@@ -176,7 +178,7 @@ body {
   color: red;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
   .new-tweet {
     width: 370px;
     height: 162px;
@@ -266,5 +268,12 @@ body {
 
 .tweet:hover .buttons {
   opacity: 1;
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    width: 450px;
+    min-width: 450px;
+  }
 }
 /*# sourceMappingURL=layout.css.map */
