--- a/public/styles/layout.scss
+++ b/public/styles/layout.scss
@@ -33,7 +33,7 @@ $colorComposeButtonHoverText: black;
 $colorErrorText: red;
 
 // screen breakpoints
-$break-small: 500px;
+$break-small: 600px;
 
 /*
  * Global layout stuff
@@ -55,7 +55,9 @@ body {
   padding-bottom: 1em;
   padding-left: 2em;
   padding-right: 2em;
-  width: 450px;
+  width: 85%;
+  min-width: 530px;
+  max-width: 680px;
   margin: auto;
   font-size: 20px;
   background-color: $colorTweetListBackground;
@@ -69,3 +71,10 @@ body {
 @import 'nav';
 @import 'new-tweet';
 @import 'tweets';
+
+@media screen and (max-width: $break-small) {
+  .container {
+    width: 450px;
+    min-width: 450px;
+  }
+}
