--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -123,7 +123,8 @@ body {
 
 .new-tweet .tweet-text {
   width: 100%;
-  height: 65px;
+  height: 90px;
+  font-size: 22px;
 }
 
 .new-tweet form {
@@ -141,6 +142,7 @@ body {
 }
 
 .new-tweet .submit-button {
+  margin-top: 10px;
   background-color: #50a6aa;
   border: 2px solid white;
   color: white;
@@ -152,6 +154,9 @@ body {
   outline: none;
   width: 12.3vw;
   max-width: 90px;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 .new-tweet .submit-button:hover {
@@ -161,7 +166,12 @@ body {
 }
 
 .new-tweet .counter {
-  float: right;
+  margin-top: 10px;
+  font-size: 22px;
+  font-weight: bold;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 .tweets {
@@ -171,6 +181,8 @@ body {
 }
 
 .error {
+  margin-top: 15px;
+  font-weight: bold;
   color: red;
 }
 
@@ -186,9 +198,21 @@ body {
   .new-tweet form {
     height: 97px;
   }
+  .new-tweet .tweet-text {
+    height: 65px;
+    font-size: 16px;
+  }
   .new-tweet .submit-button {
+    margin-top: 5px;
     height: 30px;
     width: 61.5px;
+  }
+  .new-tweet .counter {
+    margin-top: 5px;
+    font-size: 20px;
+  }
+  .new-tweet .error {
+    margin-top: 10px;
   }
 }
 
