--- a/public/styles/_new-tweet.scss
+++ b/public/styles/_new-tweet.scss
@@ -79,6 +79,7 @@
 
 .error {
   margin-top: 15px;
+  font-size: 22px;
   font-weight: bold;
   color: $colorErrorText;
 }
@@ -114,6 +115,7 @@
 
     .error {
       margin-top: 10px;
+      font-size: 16px;
     }
   }
 }
