--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -182,6 +182,7 @@ body {
 
 .error {
   margin-top: 15px;
+  font-size: 22px;
   font-weight: bold;
   color: red;
 }
@@ -213,6 +214,7 @@ body {
   }
   .new-tweet .error {
     margin-top: 10px;
+    font-size: 16px;
   }
 }
 
